# obj_parser

./: .clang-format  .gitignore  CMakeLists.txt  obj_parser.pu
include/obj_parser/: ObjParser.hpp  face.hpp  face_parser.hpp  line_parser.hpp  obj_content.hpp  obj_parser.hpp  point.hpp  vertex.hpp  vertex_data.hpp  vertex_normal.hpp  vertex_parser.hpp
src/: CMakeLists.txt  ObjParser.cpp  face.cpp  face.hpp  face_parser.cpp  geometric_vertex.cpp  geometric_vertex.hpp  line_parser.cpp  line_parser.hpp  obj_content.cpp  obj_content.hpp  obj_file_parser.cpp  obj_file_parser.hpp  obj_parser.cpp  obj_parser.hpp  point.cpp  vertex_data.cpp  vertex_normal.cpp  vertex_normal.hpp  vertex_parser.cpp
tests/: CMakeLists.txt  ObjParser_tests.cpp  face_parser_test.cpp  face_test.cpp  face_tests.cpp  geometric_vertex_test.cpp  line_parser_test.cpp  obj_content_file_test.cpp  obj_content_test.cpp  obj_parser_test.cpp  point_creation_test.cpp  point_test.cpp  test.hpp  vertex_buffer_transfer_test.cpp  vertex_create_test.cpp  vertex_creation_test.cpp  vertex_data_test.cpp  vertex_normal_test.cpp  vertex_parser_create_test.cpp  vertex_parser_creation_test.cpp  vertex_parser_getting_test.cpp  vertex_parser_next_float_test.cpp  vertex_parser_not_empty_on_create_test.cpp  vertex_test.cpp
