link_libraries(obj_parser)

add_executable(point_creation_test point_creation_test.cpp)
add_test(point_creation point_creation_test)

add_executable(vertex_parser_creation_test vertex_parser_creation_test.cpp)
add_test(vertex_parser_creation vertex_parser_creation_test)
add_executable(vertex_parser_getting_test vertex_parser_getting_test.cpp)
add_test(vertex_parser_getting vertex_parser_getting_test)