link_libraries(obj_parser)

function(add_executable_test name)
    add_executable(${name}_test ${name}_test.cpp)
    add_test(${name} ${name}_test)
endfunction()

add_executable_test(vertex_parser_create)
add_executable_test(vertex_parser_not_empty_on_create)
add_executable_test(vertex_parser_next_float)
add_executable_test(vertex_creation)
add_executable_test(vertex_buffer_transfer)
add_executable_test(vertex_data)
add_executable_test(point)
add_executable_test(face)
add_executable_test(face_parser)